# Predicting-Price-Moves-with-News-Sentiment

./: .gitignore  Makefile  README.md  add_docstrings.py  init_structure.sh  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
configs/: default.yaml  experiment_X.yaml  indicators.yaml  sentiment.yaml
docs/: architecture.md  deployment.md  index.md  pipeline.md
notebooks/: correlation.ipynb  eda_news.ipynb  eda_prices.ipynb  eda_prices_and_sentiment.ipynb
scripts/: RUN_PIPELINE.md  download_news.py  download_prices.py  run_analysis.py  run_correlation.py  run_eda.py  run_pipeline.py  run_sentiment.py  setup.sh
src/: __init__.py
src/fns_project/: __init__.py  config.py  logging_config.py
src/fns_project/analysis/: __init__.py  correlation.py  eda.py  news_sentiment.py  returns.py  sentiment.py
src/fns_project/features/: feature_store.py  indicators.py  sentiment_features.py  volatility.py
src/fns_project/nlp/: sentiment.py
src/fns_project/utils/: caching.py  dates.py  io.py  notebook_bootstrap.py
src/fns_project/viz/: dashboard.py  plots.py  report_builder.py
tests/integration/: TEST_PIPELINE.MD  test_pipeline.py
tests/unit/: test_date_utils.py  test_loader.py  test_preprocess.py
