[tool.poetry]
name = "fns_project"
version = "0.1.0"
description = "Financial News Sentiment Analysis & Feature Engineering"
authors = ["Tibebu K. <wise.tibec@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fns_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
numpy = "^1.27"
nltk = "^3.9"
textblob = "^0.17.1"
ta-lib = "^0.4.27"
pandas-ta = "^0.5.0b"
scikit-learn = "^1.3"
plotly = "^6.0"
dash = "^3.2"

[tool.poetry.dev-dependencies]
black = "^23.9"
isort = "^6.0"
pytest = "^8.0"
pytest-cov = "^4.0"
mypy = "^1.5"
pre-commit = "^3.3"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
